--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.14",
+    "@mui/x-date-pickers": "^5.0.13",
     "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.1.3",
     "prop-types": "^15.8.1",
