--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,13 +25,11 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-input-pin-code": "^1.2.0",
     "react-google-recaptcha": "^2.1.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-swipeable-views": "^0.14.0",
-    "react-swipeable-views-utils": "^0.14.0",
-    "styled-components": "^5.3.6"
+    "react-swipeable-views-utils": "^0.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
